Update course service